Feat: added my resume to the html contact section and restyled the popup by adding the proper id's

--- a/index.html
+++ b/index.html
@@ -630,9 +630,9 @@
                 <h2 data-i18n="contact.title">Contact</h2>
                 <div class="contact-info">
                     <img src="icons/mailandphonenr.png" alt="email and phone number icon">
-                    <h3><strong class="info-title" data-i18n="contact.emailLabel">Email: </strong><span id="emailLink" data-i18n="contact.email" style="cursor: pointer; text-decoration: underline;">Click here</span><br>
+                    <h3><strong class="info-title" data-i18n="contact.emailLabel">Email:</strong><span id="emailLink" data-i18n="contact.email" style="cursor: pointer;">Click here</span><br>
                     <strong class="info-title" data-i18n="contact.phoneLabel">Phone nr: </strong>
-                    <span id="phoneLink"data-i18n="contact.phone">04 000 000 0</span></h3>
+                    <span id="phoneLink"data-i18n="contact.phone"> / </span></h3>
                 </div>
                 <div class="contact-info">
                     <img src="icons/linkedin.png" alt="linkedIn icon">
@@ -640,7 +640,7 @@
                 </div>
                  <div class="contact-info">
                     <img src="icons/cv.png" alt="curriculum vitae icon">
-                    <h3><strong class="info-title" data-i18n="contact.extraLabel">CV: </strong><a href="#" target="_blank" rel="noopener" class="cv-link" data-i18n="contact.cvText">View my CV</a></h3>
+                    <h3><strong class="info-title" data-i18n="contact.extraLabel">CV: </strong><a href="documents/resume.pdf" target="_blank" rel="noopener" class="cv-link" data-i18n="contact.cvText">View my CV</a></h3>
                 </div>
                 <p class="contact-description" data-i18n="contact.description">If you're interested in working together or have any questions, feel free to reach out!</p>
             </section>
