Feat: added the language switcher div to Blog.html so uers can translate the page from english to dutch

--- a/blog.html
+++ b/blog.html
@@ -42,6 +42,12 @@
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </div>
+
+          <!--Language switcher-->
+        <div class="language-switcher">
+            <button id="lang-en" class="lang-en">EN</button>
+            <button id="lang-nl" class="lang-nl">NL</button>
+        </div>
     </nav>
 
     <main>
