Feat: added data-i18n to the contact and popup sections in index.html to make the translations work

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                 <h2 data-i18n="contact.title">Contact</h2>
                 <div class="contact-info">
                     <img src="icons/mailandphonenr.png" alt="email and phone number icon">
-                    <h3><strong class="info-title" data-i18n="contact.emailLabel">Email:</strong><span id="emailLink" data-i18n="contact.email" style="cursor: pointer;">Click here</span><br>
+                    <h3><strong class="info-title" data-i18n="contact.emailLabel">Email:</strong><span id="emailLink" data-i18n="contact.emailLink" style="cursor: pointer;">Click here</span><br>
                     <strong class="info-title" data-i18n="contact.phoneLabel">Phone nr: </strong>
                     <span id="phoneLink"data-i18n="contact.phone"> / </span></h3>
                 </div>
@@ -648,8 +648,8 @@
             <div id="contactPopup" class="popup" style="display: none;">
                 <div class="popup-content">
                     <button id="closePopup" class="close-btn" aria-label="Sluit popup"></button>
-                    <h2>Hi there! 👋</h2>
-                    <p>I really appreciate your interest in getting in touch!<br>The email section of my website is still under construction.<br><br>In the meantime, you can find my contact details in my CV. <br>Thank you for your patience and understanding. 😊 </p>
+                    <h2 data-i18n="popup.greeting">Hi there! 👋</h2>
+                    <p data-i18n="popup.message">I really appreciate your interest in getting in touch!<br>The email section of my website is still under construction.<br><br>In the meantime, you can find my contact details in my CV. <br>Thank you for your patience and understanding. 😊 </p>
                 </div>
             </div>
     </main>
