Feat: translated my personal projects in the json files

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     <h2>Tunturi</h2>
                     <p><strong>Design:</strong> None</p>
                     <p><strong>Development:</strong> HTML, CSS</p>
-                    <p><strong>Description:</strong> For this personal project, I aimed to recreate the Tunturi home page using HTML and CSS. The goal was to practice my front-end development skills and create a responsive layout.</p>
+                    <p><strong>Description:</strong><span data-i18n="projects.personal.tunturi.description">For this personal project, I aimed to recreate the Tunturi home page using HTML and CSS. The goal was to practice my front-end development skills and create a responsive layout.</span></p>
 
                     <div>
                        <h3 data-i18n="projects.personal.tunturi.color-palette-title">Color Palette:</h3>
@@ -529,26 +529,23 @@
                             <img src="img/tunturiScroll1.png" alt="tunturiScroll1" class="carousel-item">
                             <img src="img/tunturiScroll2.png" alt="tunturiScroll2" class="carousel-item">
                             <video width="320" height="240" controls>
-                                <source src="img/tuturivideo.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
+                                <source src="img/tuturivideo.mp4" type="video/mp4"><span data-i18n="projects.videoNotSupported">Your browser does not support the video tag.</span>
                             </video>
                         </div>
                     </div>
                 </div>
 
-
-
-                <!-- PROJECT 2 -->
+                <!-- PROJECT 2 - Figma Projects -->
                 <a href="#" class="project-title">Figma Projects</a>
                 <div class="project-info hidden">
                     <h2>Figma Projects</h2>
                     <p><strong>Design:</strong> Figma</p>
                     <p><strong>Development:</strong> none</p>
-                    <p><strong>Description:</strong> These are Figma projects I made between 2022 and now showcasing various design concepts and prototypes.</p>
+                    <p><strong>Description:</strong> <span data-i18n="projects.personal.figmaProjects.description"></span>These are Figma projects I made between 2022 and now showcasing various design concepts and prototypes.</span></p>
 
                     <div>
                         <!--Color palette changes based on what figma project you click on-->
-                        <h3 data-i18n="projects.personal.project2.color-palette-title">Color Palette:</h3>
+                        <h3 data-i18n="projects.personal.figmaProjects.color-palette-title">Color Palette:</h3>
                         <div class="color-palette">
                             <button style="background: #381dfc; color:white;"> #381dfc</button>
                             <button style="background: #0bf8e4; color:black;"> #0bf8e4</button>
@@ -560,7 +557,7 @@
                     </div>
 
                     <div>
-                        <h3 data-i18n="projects.personal.project2.typography-title">Typography:</h3>
+                        <h3 data-i18n="projects.personal.figmaProjects.typography-title">Typography:</h3>
                         <p class="font-families">
                             <span style="font-family: 'PaytoneOne-Regular', sans-serif;">PaytoneOne-Regular</span> <span style="color: white;"> | </span>
                             <span style="font-family: 'HappyMonkey-Regular', sans-serif;">HappyMonkey-Regular</span> <span style="color: white;"> | </span>
@@ -575,23 +572,22 @@
                             <img src="img/zuiderbadLoadPage.png" alt="zuiderbadhome" class="carousel-item">
                             <img src="img/zuiderbadEhboPin.png" alt="zuiderbadfacilities" class="carousel-item">
                             <video width="320" height="240" controls>
-                                <source src="#" type="video/mp4">
-                                Your browser does not support the video tag.
+                                <source src="#" type="video/mp4"><span data-i18n="projects.videoNotSupported">Your browser does not support the video tag.</span>
                             </video>
                         </div>
                     </div>
                 </div>
 
-                <!-- PROJECT 3 -->
+                <!-- PROJECT 3 - Audromida -->
                 <a href="#" class="project-title">Audromida</a>
                 <div class="project-info hidden">
-                    <h2>Project 3</h2>
+                    <h2>Audromida Designs</h2>
                     <p><strong>Design:</strong> Figma</p>
                     <p><strong>Development:</strong> HTML, CSS, JavaScript, JSON</p>
-                    <p><strong>Description:</strong> Audromida is my very own portfolio website that you're currently viewing! Originally built for a school project, it has evolved into a showcase of my work and skills.</p>
+                    <p><strong>Description:</strong><span data-i18n="projects.personal.audromidaProject.description"></span> Audromida is my very own portfolio website that you're currently viewing! Originally built for a school project, it has evolved into a showcase of my work and skills.</p>
 
                     <div>
-                        <h3 data-i18n="projects.personal.project3.color-palette-title">Color Palette:</h3>
+                        <h3 data-i18n="projects.personal.audromidaProject.color-palette-title">Color Palette:</h3>
                         <div class="color-palette">
                             <button style="background: #FF398F; color:white;"> #FF398F</button>
                             <button style="background: #420D4A; color:white;"> #420D4A</button>
@@ -603,7 +599,7 @@
                     </div>
 
                     <div>
-                        <h3 data-i18n="projects.personal.project3.typography-title">Typography:</h3>
+                        <h3 data-i18n="projects.personal.audromidaProject.typography-title">Typography:</h3>
                         <p class="font-families">
                             <span style="font-family: 'Sora', sans-serif;">Sora</span> <span style="color: white;"> | </span>
                             <span style="font-family: 'Manrope', sans-serif;">Manrope</span> <span style="color: white;">
@@ -615,8 +611,7 @@
                             <img src="img/zuiderbadLoadPage.png" alt="zuiderbadhome" class="carousel-item">
                             <img src="img/zuiderbadEhboPin.png" alt="zuiderbadfacilities" class="carousel-item">
                             <video width="320" height="240" controls>
-                                <source src="#" type="video/mp4">
-                                Your browser does not support the video tag.
+                                <source src="#" type="video/mp4"><span data-i18n="projects.videoNotSupported">Your browser does not support the video tag.</span>
                             </video>
                         </div>
                     </div>
