Feat: Added data-i18n to every blogpost page and fixed some positioning of the Language Switcher div in blog.Html

--- a/blog-posts/blog-post1.html
+++ b/blog-posts/blog-post1.html
@@ -27,34 +27,40 @@
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </div>
+
+        <!--Language switcher-->
+        <div class="language-switcher">
+            <button id="lang-en" class="lang-en">EN</button>
+            <button id="lang-nl" class="lang-nl">NL</button>
+        </div>
     </nav>
 
     <main>
         <article class="blogPost fullPost">
-            <h2>Hi there! Welcome to my blog</h2>
+            <h2 data-i18n="blog.posts.post1.title">Hi there! Welcome to my blog</h2>
             <p class="date">05-10-2025</p>
 
-            <p>
+            <p data-i18n="blog.posts.post1.content">
                 Why hello there and welcome to my blog! I'm very happy you decided to stop by and read my very first blog post here on Audromida. This blog is a place where you can follow my journey from a overly exited Digital Design 3rd year student to a professional webdesigner/developer. I'll write about the projects I'm working on, new things I learned, I'll even write about aswell as my intern ship that I'm doing next semester so look forward to that 👀 
             </p>
-            <p>
+            <p data-i18n="blog.posts.post1.content2">
                 Besides that, I'll also share personal stories and give some advice here and there. 
             </p>
-            <p>
+            <p data-i18n="blog.posts.post1.content3">
                 A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
 
-            <blockquote>
+            <blockquote data-i18n="blog.posts.post1.quote">
                 "A quote from the blogpost"
             </blockquote>
 
-            <p>
+            <p data-i18n="blog.posts.post1.content4">
                 A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
-            <p>
+            <p data-i18n="blog.posts.post1.content5">
                 A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
             </p>
-            <a href="/blog.html" class="backBtn">Back to Blog</a>
+            <a href="/blog.html" data-i18n="blog.posts.post1.backBtn" class="backBtn">Back to Blog</a>
         </article>
     </main>
     
