--- a/blog-posts/blog-post2.html
+++ b/blog-posts/blog-post2.html
@@ -27,34 +27,40 @@
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </div>
+
+        <!--Language switcher-->
+        <div class="language-switcher">
+            <button id="lang-en" class="lang-en">EN</button>
+            <button id="lang-nl" class="lang-nl">NL</button>
+        </div>
     </nav>
 
     <main>
         <article class="blogPost fullPost">
-            <h2>Why I started programming</h2>
+            <h2 data-i18n="blog.posts.post2.title">Why I started programming</h2>
             <p class="date">07-10-2025</p>
 
-            <p>
+            <p data-i18n="blog.posts.post2.content">
                 So you want to know why I started programming huh? Well, it all started when I was born. ... Nah, just kidding! The real story takes place a few years later than that. I've always been a fairly creative person, partially because of my health issues that kept me indoors throughout my entire childhood. I had to look for ways to entertain myself that weren't just watching TV all day. Fortunately, I was a very imaginative kid, so I started drawing and writing stories. Once I was a teenager people constantly kept saying I had to persue an artistic career because I was so talented. But I never really saw myself as an artist, more like a creative person. Drawing was something I did for fun, not for profit. So when the time came to choose a highschool study, I went for the safer option: Retail.
             </p>
-            <p>
+            <p data-i18n="blog.posts.post2.content2">
                 It was a mixure of creativity and it would land me a job once I graduated. And I did exactly that. I worked in couple different shops over the next few years, and thought I found my calling until ... Covid-19 hit. That whole period made me rethink my life, especially after I got laid off unexpectedly. I fell into a deep depression which took me a while to get out off honestly. Lockdown didn't help either. The fear of not knowing when our lives were going to return to normal if ever was truly mentally exhausting. The only thing I could do was try to keep myself busy and that meant spending alot of time watching shows, movies and YouTube videos. It was during one of those endless watching sessions that I stumbled upon a video about somebody coding their own website from scratch and my mind was blown!
             </p>
-            <p>
+            <p data-i18n="blog.posts.post2.content3">
                 I heard about coding before, but I never really thought about learning it myself. I felt too intimidated by the technical aspects of it all, thought I was too dumb to learn something like that. And yet, I kept watching more and more videos about it. Not only about people making websites, but also videogames, apps, animations, you name it. Seeing all the different things you could build, the endless creative possibilities. It intrigued me. I wanted to know more, better yet I wanted to learn it myself so once the world turned back to normal, and I had to find a new job, I decided to take a shot in the dark and went back to school instead to study webdesign. It was the best decision I've ever made.
             </p>
 
-            <blockquote>
+            <blockquote data-i18n="blog.posts.post2.quote">
                 "A quote from the blogpost"
             </blockquote>
 
-            <p>
+            <p data-i18n="blog.posts.post2.content4">
                 I'll have to admit that I didn't land in webdesign right away. Basically when I had to look for a new job and told my adviser I wanted to go back to school to "study computers" I was aiming for graphic design. I thought that'd be the closest thing to art I could get but oh no. Turns out I had way more options than that. I was getting overwhelmed and time to enroll in a school was running out so one day my adviser just said: "Here's a school closeby that offers webdesign, go to their info session and see if you like it. If you do, sign up". And so I did as I was told. And the rest is history. It was a short course but I learned so much from it. HTML, CSS, JavaScript, Photoshop, Illustrator and Figma. After I gratuated from there we were encouraged to keep learning so I took another shot in the dark and signed up for a more advanced course at college. Who would have thought that, me, going to college? Not me. But I am, and I'm loving every minute of it. 
             </p>
-            <p>
+            <p data-i18n="blog.posts.post2.content5">
                 Programming opened up alot for me. Not only career wise, but also personally. Like I said before, I never saw myself as someone who'd go to college, let alone to go study programming. Both of those things seemed too farfetched for me to ever achieve. But apparently I am capable of way more than I give myself credit for. Learning how to code has boosted my self-confidence. It made me realize that I can learn new things, even if they seem difficult at first. And let me tell you, it was difficult at first. There were multiple times JavaScript made me cry because of how frustrating it was. I even had to retake the final exam because I failed it the first time. But I didn't give up. I kept practicing, redoing exercises, asked for help, looked up countless tutorials online until I finally figured it out and absolutely nailed that retake exam! That was the moment it all clicked for me. If I can achieve that, what else am I capable of? My programming journey is far from over, but I can't wait to see where it will continue to take me in the future 😊.
             </p>
-            <a href="/blog.html" class="backBtn">Back to Blog</a>
+            <a href="/blog.html" data-i18n="blog.posts.post2.backBtn" class="backBtn">Back to Blog</a>
         </article>
     </main>
     
