--- a/blog-posts/blog-post3.html
+++ b/blog-posts/blog-post3.html
@@ -27,34 +27,40 @@
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </div>
+
+        <!--Language switcher-->
+        <div class="language-switcher">
+            <button id="lang-en" class="lang-en">EN</button>
+            <button id="lang-nl" class="lang-nl">NL</button>
+        </div>
     </nav>
 
     <main>
         <article class="blogPost fullPost">
-            <h2>Creative struggles</h2>
+            <h2 data-i18n="blog.posts.post3.title">Creative struggles</h2>
             <p class="date">22-10-2025</p>
 
-            <p>
+            <p data-i18n="blog.posts.post3.content">
                 When I tell someone I study Digital Experience Design, the most common response I get is: "Oh, so you work with computers?" and yeah, that's true, but it's way more than that. A big part of my study is learning how to design and code websites and apps which I absolutely love doing. However, one of the biggest struggles I face as a webdesigner is the creative block. There are days where I just can't come up with any new ideas for a project which is frustrating when you have deadlines to meet. It's especially frustrating when the assignment requires me to "think out of the box" and come up with something unique and innovative. <br> Luckily after 3 years in this course I've learned some techniques to overcome those creative blocks that work for me so I'm going to share them with you!
             </p>
-            <p>
+            <p data-i18n="blog.posts.post3.content2">
                 The first piece of advice I have is to simply take a break. Yes, it can be that easy sometimes. When you're stuck on a problem, stepping away from it for a little while and doing something else can help clear your mind and give you a fresh perspective. If you have other homework laying around, do that first. Or complete those chores you've been ignoring. Even changing your environment can help. Go for a walk outside, visit a friend, go walk your dog, anything that gets you out of your usual surroundings. When you return to the project later, you might find that the solution comes to you instantly.
             </p>
-            <p>
+            <p data-i18n="blog.posts.post3.content3">
                 Another technique that works for me is to look online for inspiration. Websites like Dribbble and Pinterest are great places to find design ideas. Scrolling through Instagram can also help to find new trends and styles. Just make sure you don't copy someone else's work, or start comparing yourself to others. Instead use it as a starting point to create something new and unique. Also, don't limit yourself to just online inspiration. Look at art, read a book, go into nature, listen to music, anything that sparks your creativity. You never know where your next idea will come from! 
             </p>
 
-            <blockquote>
+            <blockquote data-i18n="blog.posts.post3.quote">
                 "You never know where your next idea will come from!" 
             </blockquote>
 
-            <p>
+            <p data-i18n="blog.posts.post3.content4">
                 Creative block sucks, but it's a normal part of the creative process. By taking breaks, seeking inspiration in new places, and practicing various brainstorming techniques, you can overcome those blocks and get back to creating amazing designs. So the next time you find yourself stuck, remember these tips and keep pushing forward!
             </p>
-            <p>
+            <p data-i18n="blog.posts.post3.content5">
                 Or just take a nap. Naps are great.
             </p>
-            <a href="/blog.html" class="backBtn">Back to Blog</a>
+            <a href="/blog.html" data-i18n="blog.posts.post3.backBtn" class="backBtn">Back to Blog</a>
         </article>
     </main>
     
