Feat: made a js folder, moved the home.js into there and fixed the script tags on every html page

--- a/blog-posts/blog-post1.html
+++ b/blog-posts/blog-post1.html
@@ -68,6 +68,7 @@
         <p>&copy; 2025 Audromida</p>
     </footer>
 
-    <script src="home.js"></script>
+    <script src="/js/home.js"></script>
+
 </body>
 </html>
