--- a/blog.html
+++ b/blog.html
@@ -89,6 +89,7 @@
         <div class="daisyWalk"></div>
     </footer>
 
-    <script src="home.js"></script>
+    <script src="/js/home.js"></script>
+
 </body>
 </html>
