--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
         <span class="lightbox-content" id="lightboxContent"></span>
     </div>
 
-    <script src="home.js"></script>
+    <script src="/js/home.js"></script>
 
 </body>
 </html>
