--- a/blog-posts/blog-post2.html
+++ b/blog-posts/blog-post2.html
@@ -68,6 +68,7 @@
         <p>&copy; 2025 Audromida</p>
     </footer>
 
-    <script src="home.js"></script>
+    <script src="/js/home.js"></script>
+
 </body>
 </html>
