Feat: added the scripts for the new js files under each html page

--- a/blog.html
+++ b/blog.html
@@ -90,6 +90,8 @@
     </footer>
 
     <script src="/js/home.js"></script>
+    <script src="/js/blogPreview.js"></script>
+    <script src="/js/lang.js"></script>
 
 </body>
 </html>
