--- a/index.html
+++ b/index.html
@@ -660,6 +660,8 @@
     </div>
 
     <script src="/js/home.js"></script>
+    <script src="/js/blogPreview.js"></script>
+    <script src="/js/lang.js"></script>
 
 </body>
 </html>
