Feat: added a temporary favicon

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     </script>
     <!-- End MailerLite Universal -->
 
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon.png">
+
 </head>
 
 <!-- Google tag (gtag.js) -->
