Fix: fixed minor translation issues with the hero section CTA buttons

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- End MailerLite Universal -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon.png">
-
+ 
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -144,8 +144,8 @@
             <h2 data-i18n=" hero.subtitle">Frontend Designer / Developer</h2>
             <p data-i18n="hero.description">I can help you design and build unique and user-friendly websites your users will love!</p>
         <div class="hero.btns">
-            <a href="#contact" class="btn" data-i18n="hero.contact">Get in touch</a>
-            <a href="#projects" class="btn" data-i18n="hero.projects">Browse projects</a>
+            <a href="#contact" class="btn" data-i18n="hero.contactBtn">Get in touch</a>
+            <a href="#projects" class="btn" data-i18n="hero.projectsBtn">Browse projects</a>
         </div>
         </div>
         <div class="hero-image">
