--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="canonical" href="https://audromida.tech/">
 
     <!--Favicon-->
-    <link rel="icon" href="#" type="image/x-icon">
+    <!--<link rel="icon" href="#" type="image/x-icon"> -->
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -82,7 +82,8 @@
     </script>
     <!-- End MailerLite Universal -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://audromida.tech/icons/favicon.png">
+
  
 </head>
 
