--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <h3 data-i18n="about.courses.title">Courses:</h3>
                     <ul>
                         <li>Bachelor Digital Experienxe Design - Thomas More Mechelen (2026)</li>
-                        <li>Webdesigner - GO! Crescendo (2023)</li>
+                        <li>Webdesign - GO! Crescendo (2023)</li>
                         <li>Visual Merchandising BSO Verkoop - OLVI Boom (2016)</li>
                     </ul>
                 </div>
@@ -282,20 +282,41 @@
         <!--SERVICES SECTION-->
         <section class="services" id="services">
             <h2 data-i18n="services.title">Services</h2>
+
+            <div class="service-container">
             <div class="service">
-                <img src="icons/ux-ui.png" alt="ux/ui icon">
-                <h3 data-i18n="services.uiux.title">UI/UX Design:</h3>
-                <p data-i18n="services.uiux.desc">I create user-friendly designs that are both easy to use and visually appealing.</p>
+                <div class="icon-wrapper">
+                    <img src="icons/ux-ui.png" alt="ux/ui icon">
+                </div>
+                <div class="overlay"></div>
+                
+                <div class="text-wrapper">
+                    <h3 data-i18n="services.uiux.title">UI/UX Design:</h3>
+                    <p data-i18n="services.uiux.desc">I design user-friendly and visually engaging interfaces that align with your audiance's needs. My focus is on clear structure, intuative interactions, and a smooth user experience.</p>
+                </div>
             </div>
             <div class="service">
-               <img src="icons/webappdevelopment.png" alt="web/app icon">
-                <h3 data-i18n="services.frontend.title">Frontend Development:</h3>
-                <p data-i18n="services.frontend.desc">I build responsive, fast-loading websites and apps using HTML, CSS, and JavaScript.</p>
+                <div class="icon-wrapper">
+                    <img src="icons/webappdevelopment.png" alt="web/app icon">
+                </div>
+                <div class="overlay"></div>
+
+                <div class="text-wrapper">
+                    <h3 data-i18n="services.frontend.title">Frontend Development:</h3>
+                    <p data-i18n="services.frontend.desc">I build modern, responsive, and fast-performing websites and web applications using HTML, CSS and JavaScript. I translate designs into functional, high-quality digital products.</p>
+                </div>
             </div>
             <div class="service">
-                <img src="icons/3Ddesign.png" alt="3D design icon">
-                <h3 data-i18n="services.3d.title">3D Design:</h3>
-                <p data-i18n="services.3d.desc">I create 3D models and animations using Blender and bring ideas to life.</p>
+                <div class="icon-wrapper">
+                    <img src="icons/3Ddesign.png" alt="3D design icon">
+                </div>
+                <div class="overlay"></div>
+
+                <div class="text-wrapper">
+                    <h3 data-i18n="services.3d.title">3D Design:</h3>
+                    <p data-i18n="services.3d.desc"> I create detailed 3D models, visualizations, and animations using Blender. From concept to final render, I bring ideas to life with realistic or stylized 3D visuals.</p>
+                </div>
+            </div>
             </div>
         </section>
 
@@ -614,7 +635,7 @@
                     <img src="icons/linkedin.png" alt="linkedIn icon">
                     <h3><strong class="info-title" data-i18n="contact.linkedinLabel">LinkedIn: </strong><a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386" target="_blank" data-i18n="contact.linkedinText">Audrey Designs</a></h3>
                 </div>
-                 <div class="contact-info">
+                <div class="contact-info">
                     <img src="icons/cv.png" alt="curriculum vitae icon">
                     <h3><strong class="info-title" data-i18n="contact.extraLabel">CV: </strong><a href="documents/resume.pdf" target="_blank" rel="noopener" class="cv-link" data-i18n="contact.cvText">View my CV</a></h3>
                 </div>
