Style: changed the "back to blog" a-tag from the blog posts.html

--- a/blog-posts/blog-post1.html
+++ b/blog-posts/blog-post1.html
@@ -46,7 +46,7 @@
             <p data-i18n="blog.posts.post1.content2">
                 Besides that, I'll also share personal stories and give some advice here and there. My life currently revolves around webdesign and development but that doesn't mean I don't have other interests aswell. So expect some random blogposts about my other hobbies too! I hope you enjoy reading my blog as much as I enjoy writing it. If you have any questions or suggestions for future blogposts, feel free to reach out to me via email that you can find in the contact section. Happy reading!
             </p>
-            <a href="/blog.html" data-i18n="blog.posts.post1.backBtn" class="backBtn">Back to Blog</a>
+            <a href="/blog.html" data-i18n="blog.posts.post1.backBtn" class="backBtn">←	Back to Blog</a> 
         </article>
     </main>
     
