--- a/blog-posts/blog-post2.html
+++ b/blog-posts/blog-post2.html
@@ -60,7 +60,7 @@
             <p data-i18n="blog.posts.post2.content5">
                 Programming opened up alot for me. Not only career wise, but also personally. Like I said before, I never saw myself as someone who'd go to college, let alone to go study programming. Both of those things seemed too farfetched for me to ever achieve. But apparently I am capable of way more than I give myself credit for. Learning how to code has boosted my self-confidence. It made me realize that I can learn new things, even if they seem difficult at first. And let me tell you, it was difficult at first. There were multiple times JavaScript made me cry because of how frustrating it was. I even had to retake the final exam because I failed it the first time. But I didn't give up. I kept practicing, redoing exercises, asked for help, looked up countless tutorials online until I finally figured it out and absolutely nailed that retake exam! That was the moment it all clicked for me. If I can achieve that, what else am I capable of? My programming journey is far from over, but I can't wait to see where it will continue to take me in the future 😊.
             </p>
-            <a href="/blog.html" data-i18n="blog.posts.post2.backBtn" class="backBtn">Back to Blog</a>
+            <a href="/blog.html" data-i18n="blog.posts.post2.backBtn" class="backBtn">←	Back to Blog</a>
         </article>
     </main>
     
