--- a/blog-posts/blog-post3.html
+++ b/blog-posts/blog-post3.html
@@ -60,7 +60,7 @@
             <p data-i18n="blog.posts.post3.content5">
                 Or just take a nap. Naps are great.
             </p>
-            <a href="/blog.html" data-i18n="blog.posts.post3.backBtn" class="backBtn">Back to Blog</a>
+            <a href="/blog.html" data-i18n="blog.posts.post3.backBtn" class="backBtn">←	 Back to Blog</a>
         </article>
     </main>
     
