--- a/blog.html
+++ b/blog.html
@@ -36,11 +36,11 @@
         </div>
 
         <div class="navLinks" id="navLinks">
-            <a href="#aboutme">About me</a>
+            <a href="index.html#aboutme">About me</a>
             <a href="blog.html" class="blogLink">Blog</a>
-            <a href="#services">Services</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+            <a href="index.html#services">Services</a>
+            <a href="index.html#projects">Projects</a>
+            <a href="index.html#contact">Contact</a>
         </div>
 
         <!--Language switcher-->
