Feat: translated the "read more" links and redirected the navbar links

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
         </div>
 
         <div class="navLinks" id="navLinks">
-            <a href="#aboutme" data-i18n="nav.about">About me</a>
-            <a href="#latestBlog" class="blogLink" data-i18n="nav.blog">Blog</a>
-            <a href="#services" data-i18n="nav.services">Services</a>
-            <a href="#projects" data-i18n="nav.projects">Projects</a>
-            <a href="#contact" data-i18n="nav.contact">Contact</a>
+            <a href="index.html#aboutme" data-i18n="nav.about">About me</a>
+            <a href="blog.html" class="blogLink" data-i18n="nav.blog">Blog</a>
+            <a href="index.html#services" data-i18n="nav.services">Services</a>
+            <a href="index.html#projects" data-i18n="nav.projects">Projects</a>
+            <a href="index.html#contact" data-i18n="nav.contact">Contact</a>
         </div>
 
         <!--Language switcher-->
@@ -651,9 +651,14 @@
             </div>
     </main>
 
-    <footer data-i18n="footer.text">
-        <p>&copy; 2025 Audromida Designs. All rights reserved.</p>
+    <footer>
+        <p data-i18n="footer.text">&copy; 2025 Audromida Designs. All rights reserved.</p>
+         <!--Daisy walking animation here-->
+        <div class="daisy-container">
+            <div class="daisyWalk"></div>
+        </div>
     </footer>
+
 
     <!--Lightbox-->
     <div class="lightBox" id="lightBox">
