Feat: added the daisy animation to every html page

--- a/blog-posts/blog-post1.html
+++ b/blog-posts/blog-post1.html
@@ -51,7 +51,9 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 Audromida</p>
+        <p data-i18n="footer.text">&copy; 2025 Audromida Designs. All rights reserved.</p>
+         <!--Daisy walking animation here-->
+        <div class="daisyWalk"></div>
     </footer>
 
     <script src="/js/home.js"></script>
