--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     <h2>XD/iXD Stickers</h2>
                     <p><strong>Design: </strong> Figma, Illustrator</p>
                     <p><strong>Development: </strong> None</p>
-                    <p><strong data-i18n="projects.school.xdStickers.descLabel">Description: </strong><span data-i18n="projects.school.xdStickers.description"></span>For the openingsweek of the new schoolyear at Thomas More, we were asked create something to put Digital Experience Design on the map! I came up with the fun idea of creating stickers resembling the course. Combining elements of both design and development, I designed stickers that reflect the essence of the curriculum.</p>
+                    <p><strong data-i18n="projects.school.xdStickers.descLabel">Description: </strong><span data-i18n="projects.school.xdStickers.description">For the openingsweek of the new schoolyear at Thomas More, we were asked create something to put Digital Experience Design on the map! I came up with the fun idea of creating stickers resembling the course. Combining elements of both design and development, I designed stickers that reflect the essence of the curriculum.</p></span>
 
                     <div>
                         <h3 data-i18n="projects.school.xdStickers.color-palette-title">Color Palette:</h3>                        
@@ -498,9 +498,9 @@
                 <div class="modalContent">
                     <span class="close" data-modal="modal-ben">&times;</span>
                     <h3 data-i18n="projects.school.zuiderbad.modal.ben.name">Ben Devos</h3>
-                    <p><strong data-i18n="projects.school.zuiderbad.modal.ben.jobLabel">Job description: </strong> <span data-i18n="projects.school.zuiderbad.modal.ben.job">Backend Developer: </span></p>
+                    <p><strong data-i18n="projects.school.zuiderbad.modal.ben.jobLabel">Job description:</strong> <span data-i18n="projects.school.zuiderbad.modal.ben.job">Backend Developer: </span></p>
                     <p><strong data-i18n="projects.school.zuiderbad.modal.ben.feedbackLabel">Feedback: </strong> <span data-i18n="projects.school.zuiderbad.modal.ben.feedback"></span>I loved this project!</p>
-                    <p> <strong data-i18n="projects.school.zuiderbad.modal.ben.portfolioLabel">Check out their work: </strong><a href="#" target="_blank" class="infoLinks"> Portfolio</a></p>
+                    <p> <strong data-i18n="projects.school.zuiderbad.modal.ben.portfolioLabel">Check out their work: </strong><a href="https://be.linkedin.com/in/devos-develops/en" target="_blank" class="infoLinks"> Portfolio</a></p>
                 </div>
             </div>
 
@@ -509,8 +509,8 @@
             <div id="modal-sam" class="modal">
                 <div class="modalContent">
                     <span class="close" data-modal="modal-sam">&times;</span>
-                    <h3 data-i18n="projects.school.zuiderbad.modal.ben.name">Sam Pittois</h3>
-                    <p><strong data-i18n="projects.school.zuiderbad.modal.sam.jobLabel">Job description: </strong><span data-i18n="projects.school.zuiderbad.modal.sam.job">3D Designer: </span></p>
+                    <h3 data-i18n="projects.school.zuiderbad.modal.sam.name">Sam Pittois</h3>
+                    <p><strong data-i18n="projects.school.zuiderbad.modal.sam.jobLabel">Job description: </strong><span data-i18n="projects.school.zuiderbad.modal.sam.job">3D Designer </span></p>
                     <p><strong data-i18n="projects.school.zuiderbad.modal.sam.feedbackLabel">Feedback: </strong><span data-i18n="projects.school.zuiderbad.modal.sam.feedback"></span>I loved this project!</p>
                     <p><strong data-i18n="projects.school.zuiderbad.modal.sam.portfolioLabel">Check out her work: </strong><a href="#" target="_blank" class="infoLinks"> Portfolio</a></p>
                 </div>
